--- a/www/styles/balancer-nav.css
+++ b/www/styles/balancer-nav.css
@@ -1,7 +1,7 @@
 .balancer-nav {
 	background-color: #FFF;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	margin: 0;
 	position: absolute;
 	height: 4.666666666666667rem;
